--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-three/fiber": "^8.13.7",
+    "@react-three/postprocessing": "^2.15.1",
     "@types/node": "20.5.4",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -17,6 +18,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "glslify-loader": "^2.0.0",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
@@ -26,6 +28,8 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@react-three/drei": "^9.80.6"
+    "@react-three/drei": "^9.80.6",
+    "raw-loader": "^4.0.2",
+    "snowpack-plugin-glslify": "^1.0.0"
   }
 }
